Deploy script and favicon.

--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -8,7 +8,7 @@
 
   <style type="text/css">
     {% include css/normalize.css %}
-    {% include css/milligram.css %}
+    {% include css/index-page-milligram.css %}
     {% include css/wintermeyer-consulting.css %}
     {% if page.sw_avatar %}
     {% include css/sw_avatar.css %}
