Changes to relative URLs in the top navigation.

--- a/jekyll/_includes/navigation.html
+++ b/jekyll/_includes/navigation.html
@@ -1,6 +1,6 @@
 <ul class="topnav">
-  <li><a class="active" href="https://www.wintermeyer-consulting.de/">Home</a></li>
-  <li><a href="https://www.wintermeyer-consulting.de/rails/">Rails</a></li>
-  <li><a href="https://www.wintermeyer-consulting.de/phoenix/">Phoenix</a></li>
-  <li><a href="https://www.wintermeyer-consulting.de/webperformance/">WebPerf</a></li>
+  <li><a class="active" href="/">Home</a></li>
+  <li><a href="/rails/">Rails</a></li>
+  <li><a href="/phoenix/">Phoenix</a></li>
+  <li><a href="/webperformance/">WebPerf</a></li>
 </ul>
