--- a/jekyll/_includes/trainings-mini-table.html
+++ b/jekyll/_includes/trainings-mini-table.html
@@ -14,6 +14,7 @@
     <thead>
       <tr>
         <th>Termin</th>
+        <th>Ort</th>
         <th>Preis (zzgl. MwSt.)</th>
       </tr>
     </thead>
@@ -31,10 +32,14 @@
       <tr>
         <td>
           {% for termin in training.trainings %}
-            <a href="{{ training.url }}">{{ termin.date | date: "%-d.%m.%Y" }} in {{ termin.location }}</a>
+            <a href="{{ training.url }}">{{ termin.date | date: "%-d.%m.%Y" }}</a>
+            {% assign location = termin.location %}
+
           {% endfor %}
         </td>
-
+        <td>
+          {{ location }}
+        </td>
         <td>
           {{ training.price }} Euro
         </td>
