--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<div class="container">
+  <div class="row">
+    <div class="column">
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
@@ -18,8 +21,7 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
-  {% if site.disqus.shortname %}
-    {% include disqus_comments.html %}
-  {% endif %}
 </article>
+</div>
+</div>
+</div>
