--- a/jekyll/_includes/google-analytics.html
+++ b/jekyll/_includes/google-analytics.html
@@ -4,7 +4,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', '{{ site.google_analytics }}', 'auto');
+  ga('create', '{{ site.google_analytics }}', {'siteSpeedSampleRate': 50});
   ga('send', 'pageview');
 
 </script>
