Rises consulting price.

--- a/jekyll/_includes/consulting-preise.html
+++ b/jekyll/_includes/consulting-preise.html
@@ -1,5 +1,5 @@
 <h3>Preise</h3>
-<p>Ich bin der Ansicht, das eine Preisliste kein Geheimnis sein darf. Bei längeren Projekten gebe ich Ihnen auf Anfrage gerne einen Spezialpreis. Bei normalen Consultingeinsätzen gilt der folgende Preis:</p>
+<p>Bei normalen Consultingeinsätzen gilt der folgende Preis:</p>
 <table>
   <thead>
     <tr>
@@ -10,11 +10,10 @@
   <tbody>
     <tr>
       <td>Personentag</td>
-      <td>980 Euro</td>
+      <td>1.200 Euro</td>
     </tr>
   </tbody>
 </table>
-<p>Der Personentag besteht aus 8 Stunden inklusive 60 Minuten Pause. Bei Wochenend-, Nacht- und Feiertags-Einsätze erhebe ich einen Aufschlag von 100%.</p>
+<p>Bei längeren Projekten gebe ich Ihnen auf Anfrage gerne einen Spezialpreis. Der Personentag besteht aus 8 Stunden inklusive 60 Minuten Pause. Bei Wochenend-, Nacht- und Feiertags-Einsätze erhebe ich einen Aufschlag von 100%.</p>
 <h3>Geld-Zurück-Garantie</h3>
-<p>Sie müssen keine Katze im Sack kaufen! Jeder Neukunde bekommt beim ersten Consulting-Einsatz eine Geld-Zurück-Garantie.</p>
-<p>Sollten Sie nach dem ersten Tag nicht zufrieden sein, dann reicht am Ende dieses Tages eine formlose E-Mail an mich und Sie kommen nur die Reisekosten berechnet.</p>
+<p>Jeder Neukunde bekommt beim ersten Consulting-Einsatz eine Geld-Zurück-Garantie. Sollten Sie nach dem ersten Tag nicht zufrieden sein, dann reicht am Ende dieses Tages eine formlose E-Mail an mich und Sie kommen nur die Reisekosten berechnet.</p>
