Adds Phoenix Book

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
     <hr />
-    <p>Copyright 2017 by Stefan Wintermeyer - <a href="/impressum.html">Impressum</a> - <a href="/datenschutzerklaerung.html">Datenschutzerklärung</a></p>
+    <p>Copyright 2017-2020 by Stefan Wintermeyer - <a href="/impressum.html">Impressum</a> - <a href="/datenschutzerklaerung.html">Datenschutzerklärung</a></p>
   </div>
 </div>
