--- a/jekyll/_includes/navigation.html
+++ b/jekyll/_includes/navigation.html
@@ -2,5 +2,5 @@
   <li><a class="active" href="/">Home</a></li>
   <li><a href="/rails/">Rails</a></li>
   <li><a href="/phoenix/">Phoenix</a></li>
-  <li><a href="/webperformance/">WebPerf</a></li>
+  <li><a href="/books/">Bücher</a></li>
 </ul>
