--- a/jekyll/_includes/consulting-preise.html
+++ b/jekyll/_includes/consulting-preise.html
@@ -10,10 +10,13 @@
   <tbody>
     <tr>
       <td>Personentag</td>
-      <td>1.200 Euro</td>
+      <td>1.450 Euro</td>
     </tr>
   </tbody>
 </table>
-<p>Bei längeren Projekten gebe ich Ihnen auf Anfrage gerne einen Spezialpreis. Der Personentag besteht aus 8 Stunden inklusive 60 Minuten Pause. Bei Wochenend-, Nacht- und Feiertags-Einsätze erhebe ich einen Aufschlag von 100%.</p>
+<p>Bei längeren Projekten gebe ich Ihnen auf Anfrage gerne einen Spezialpreis. Der Personentag besteht aus 8 Stunden
+  inklusive 60 Minuten Pause. Bei Wochenend-, Nacht- und Feiertags-Einsätze erhebe ich einen Aufschlag von 100%.</p>
 <h3>Geld-Zurück-Garantie</h3>
-<p>Jeder Neukunde bekommt beim ersten Consulting-Einsatz eine Geld-Zurück-Garantie. Sollten Sie nach dem ersten Tag nicht zufrieden sein, dann reicht am Ende dieses Tages eine formlose E-Mail an mich und Sie kommen nur die Reisekosten berechnet.</p>
+<p>Jeder Neukunde bekommt beim ersten Consulting-Einsatz eine Geld-Zurück-Garantie. Sollten Sie nach dem ersten Tag
+  nicht zufrieden sein, dann reicht am Ende dieses Tages eine formlose E-Mail an mich und Sie kommen nur die Reisekosten
+  berechnet.</p>
